--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -19,6 +19,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+      - name: Run unit tests
+        run: |
+          PYTHONPATH=src pytest tests/
       - name: Run application smoke test
         run: |
           timeout 5 python src/main.py << EOF || [ $? -eq 124 ]
